k8s-ingress/deploy-latest.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-ingress
spec:
  selector:
    app: k8s-ingress
  ports:
    - port: 80
      targetPort: 8000
    # - port: 443
    #   targetPort: 443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-ingress
  labels:
    app: k8s-ingress
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8s-ingress
  template:
    metadata:
      labels:
        app: k8s-ingress
    spec:
      containers:
        - name: k8s-ingress
          image: whyssz/k8s-ingress:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "250m"
          ports:
            - containerPort: 8000
            # - containerPort: 443
