k8s-ingress/deploy-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-ingress-2
spec:
  selector:
    app: http-server
  ports:
    - port: 80
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-ingress-2
  labels:
    app: k8s-ingress-2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8s-ingress-2
  template:
    metadata:
      labels:
        app: k8s-ingress-2
    spec:
      containers:
        - name: k8s-ingress-2
          image: whyssz/k8s-ingress:2.0.0
          resources:
            limits:
              memory: "128Mi"
              cpu: "250m"
          ports:
            - containerPort: 8000
