k8s-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  # annotations:
  #   cert-manager.io/cluster-issuer: "letsencrypt-prod"
  #   nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - app-host.ru
  #     secretName: "k8s-ingress-tls-secret"
  rules:
    - host: app-my-locale-site.ru
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: k8s-ingress
                port:
                  number: 80
          - pathType: Prefix
            path: /v1
            backend:
              service:
                name: k8s-ingress-v1
                port:
                  number: 80
          - pathType: Exact
            path: /v2
            backend:
              service:
                name: k8s-ingress-v2
                port:
                  number: 80
    - host: app-v3-my-locale-site.ru
      http:
        paths:
          - pathType: Exact
            path: /
            backend:
              service:
                name: k8s-ingress-v3
                port:
                  number: 80
